<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="10dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/s_num"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:fontFamily="@font/muli"
            android:text="@string/items_num"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size1" />

        <ImageView
            android:id="@+id/flags"
            android:layout_width="70dp"
            android:layout_height="45dp"
            android:layout_centerHorizontal="true"
            android:layout_toEndOf="@+id/s_num"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/CountryName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/flags"
            android:fontFamily="@font/muli"
            android:text="@string/country"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size1" />

        <TextView
            android:id="@+id/Cases"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/muli"
            android:text="@string/totalCases"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size1" />

    </RelativeLayout>
</com.google.android.material.card.MaterialCardView>