<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/card_width3"
        android:background="@color/teal_700">

        <ImageView
            android:layout_width="130dp"
            android:layout_height="150dp"
            android:layout_alignParentBottom="true"
            android:src="@drawable/virus" />

        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/coronavirus" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:ignore="RelativeOverlap">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/muli"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size1" />

            <TextView
                android:id="@+id/CountryList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawablePadding="10dp"
                android:fontFamily="@font/muli_bold"
                android:text="@string/country"
                android:textColor="@color/white"
                android:textSize="@dimen/title_size"
                app:drawableRightCompat="@drawable/ic_drop_down" />

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/muli"
                android:text="@string/case_Updated"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size2" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/yellow" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/muli"
                            android:text="@string/Active"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/blue" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/muli"
                            android:text="@string/Total"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/pink_100" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/muli"
                            android:text="@string/Recover"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/brown" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/muli"
                            android:text="@string/Deaths"
                            android:textColor="@color/white"
                            android:textSize="@dimen/text_size1" />

                    </LinearLayout>

                </LinearLayout>

                <org.eazegraph.lib.charts.PieChart xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/pieChart"
                    android:layout_width="130dp"
                    android:layout_height="130dp"
                    android:padding="8dp"
                    app:egInnerPaddingColor="@color/teal_700"
                    app:egLegendHeight="0dp"
                    app:egLegendTextSize="0dp"
                    app:egUsePieRotation="true"
                    app:egValueTextSize="0dp"/>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginTop="30dp"
            android:paddingHorizontal="12dp"
            android:layout_marginBottom="10dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/card_width1"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:strokeColor="@color/teal_700"
                app:strokeWidth="1dp"
                android:padding="12dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/yellow" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/muli"
                            android:text="@string/Active"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size1" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/ActiveCases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/active"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_size" />
                    <TextView
                        android:id="@+id/TodayActive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/today_active"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size1" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/card_width1"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:strokeColor="@color/teal_700"
                app:strokeWidth="1dp"
                android:padding="12dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/blue" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/muli"
                            android:text="@string/Total"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size1" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/TotalCases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/totalCases"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_size" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/muli_bold"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size1" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/card_width1"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:strokeColor="@color/teal_700"
                app:strokeWidth="1dp"
                android:padding="12dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/pink_100" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:fontFamily="@font/muli"
                            android:text="@string/Recover"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size1" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/RecoverCases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/active"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_size" />
                    <TextView
                        android:id="@+id/TodayRecover"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/today_active"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size1" />

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/card_width1"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                app:strokeColor="@color/teal_700"
                app:strokeWidth="1dp"
                android:padding="12dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                app:cardElevation="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="15dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="12dp"
                            android:layout_height="12dp"
                            android:background="@color/brown" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:fontFamily="@font/muli"
                            android:text="@string/Deaths"
                            android:textColor="@color/black"
                            android:textSize="@dimen/text_size1" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/DeathsCases"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/active"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title_size" />
                    <TextView
                        android:id="@+id/TodayDeaths"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/muli_bold"
                        android:text="@string/today_active"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_size1" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </GridLayout>


    </androidx.core.widget.NestedScrollView>
</LinearLayout>